errors.txt
    Checking code-rag v0.1.0 (I:\01-Master_Code\Test-Labs\code-rag)
warning: unused import: `Array`
 --> src\storage.rs:2:91
  |
2 | use arrow_array::{RecordBatch, StringArray, Float32Array, Int32Array, FixedSizeListArray, Array};
  |                                                                                           ^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0277]: the trait bound `Vec<RecordBatch>: IntoArrow` is not satisfied
   --> src\storage.rs:105:19
    |
105 |         table.add(vec![batch]).execute().await?;
    |               --- ^^^^^^^^^^^ the trait `arrow_array::RecordBatchReader` is not implemented for `Vec<RecordBatch>`
    |               |
    |               required by a bound introduced by this call
    |
    = help: the following other types implement trait `arrow_array::RecordBatchReader`:
              ArrowArrayStreamReader
              Box<R>
              MaybeEmbedded<R>
              RecordBatchIterator<I>
              WithEmbeddings<R>
              arrow_csv::reader::BufReader<R>
              arrow_ipc::reader::FileReader<R>
              arrow_ipc::reader::StreamReader<R>
            and 3 others
    = note: required for `Vec<RecordBatch>` to implement `IntoArrow`
note: required by a bound in `Table::add`
   --> C:\Users\ASCC\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\lancedb-0.23.1\src\table.rs:785:19
    |
785 |     pub fn add<T: IntoArrow>(&self, batches: T) -> AddDataBuilder<T> {
    |                   ^^^^^^^^^ required by this bound in `Table::add`

error[E0599]: the method `execute` exists for struct `AddDataBuilder<Vec<RecordBatch>>`, but its trait bounds were not satisfied
   --> src\storage.rs:105:32
    |
105 |         table.add(vec![batch]).execute().await?;
    |                                ^^^^^^^ method cannot be called on `AddDataBuilder<Vec<RecordBatch>>` due to unsatisfied trait bounds
    |
    = note: the following trait bounds were not satisfied:
            `Vec<RecordBatch>: arrow_array::RecordBatchReader`
            which is required by `Vec<RecordBatch>: IntoArrow`

Some errors have detailed explanations: E0277, E0599.
For more information about an error, try `rustc --explain E0277`.
warning: `code-rag` (lib) generated 1 warning
error: could not compile `code-rag` (lib) due to 2 previous errors; 1 warning emitted
